# chip8

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  run.sh
src/: CMakeLists.txt  cpu.cpp  cpu.h  display.cpp  display.h  main.cpp
src/chip8_app/: main.cpp
src/chip8_core/: cpu.cpp  cpu.h  display.cpp  display.h
tests/: CMakeLists.txt  test_cpu.cpp  test_display.cpp
